Code cleanup. Workflow cancellation method wiring